--- a/app/(main)/profile/profile.module.scss
+++ b/app/(main)/profile/profile.module.scss
@@ -7,14 +7,9 @@
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
-  padding: vars.$spacing-lg;
   display: flex;
   flex-direction: column;
   gap: vars.$spacing-2xl;
-
-  @media (min-width: 768px) {
-    padding: vars.$spacing-2xl;
-  }
 }
 
 .header {
