--- a/app/(main)/transaction/transaction.module.scss
+++ b/app/(main)/transaction/transaction.module.scss
@@ -14,12 +14,6 @@
   gap: vars.$spacing-2xl;
   overflow-y: auto;
   overflow-x: hidden;
-
-
-
-  @include typography.respond-down("tablet") {
-    padding: vars.$spacing-2xl;
-  }
 }
 
 .headerContainer {
